tests/cases/compiler/contextualTyping5/index.ts
class foo { public bar:{id:number;} = { }; }
//~^ ERROR: Property 'id' is missing.